Fixed invisible text

--- a/src/App.css
+++ b/src/App.css
@@ -7,5 +7,4 @@
 body {
   font-family: "Play", sans-serif;
   background-color: white;
-  color: white;
 }
